# Hackathon2-The-Evolution-of-Todo

./: .gitignore  README.md  main.py
.github/workflows/: ci.yml
.specify/memory/: constitution.md
api/: .env.example  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
api/tests/: conftest.py  test_auth.py  test_tasks.py
api/todo/: __init__.py  auth.py  db.py  main.py  models.py
api/todo/routes/: auth.py  tasks.py
history/prompts/constitution/: 0002-establish-project-constitution.constitution.prompt.md
history/prompts/todo-app/: 0003-create-todo-app-specification.spec.prompt.md  0004-phase-ii-web-app-spec-update.spec.prompt.md  0005-phase-ii-architecture-plan.spec.prompt.md  0006-phase-ii-tasks.spec.prompt.md  0007-approve-tasks.spec.prompt.md  0008-t001-scaffold-implemented.tasks.prompt.md  0009-implement-t003.tasks.prompt.md  0010-auth-integration-spike.spec.prompt.md  0011-implement-t006.tasks.prompt.md  0012-implement-t005.tasks.prompt.md
specs/todo-app/: plan.md  spec.md  spike-betterauth.md  tasks.md
tests/: manual_checks.md
todo/: __init__.py  errors.py  models.py  repository.py  service.py  ui.py
web/: README.md  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/app/tasks/: page.tsx
web/src/context/: AuthContext.tsx
web/src/lib/: api.ts
