[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "FastAPI backend for Todo App (Phase II)"
authors = ["team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
sqlmodel = "^0.0.8"
alembic = "^1.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
